--- a/contact-us.html
+++ b/contact-us.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Defendbyto</title>
-<link rel="icon" type="image/png" href="/images/fav.png">
+<link rel="icon" type="image/png" href="/fix-your-issue/images/fav.png">
 
 </head>
 
@@ -34,8 +34,8 @@ align-items:center;
 ">
 
 <div class="site-logo">
-    <img src="/images/fav.png" alt="Defendbyto Logo">
-    <a href="/">Defendbyto</a>
+    <img src="/fix-your-issue/images/fav.png" alt="Defendbyto Logo">
+    <a href="/fix-your-issue/index.html">Defendbyto</a>
 </div>
 
 <style>
@@ -61,11 +61,11 @@ align-items:center;
 
 <div style="display:flex;gap:30px;">
 
-<a href="/index.html" style=" text-decoration:none; color:#111; position:relative; font-weight:500; "> Home <span style=" position:absolute; left:0; bottom:-6px; width:0%; height:2px; background:#FFC107; transition:0.3s; "></span> </a> 
-<a href="/index.html#about" style=" text-decoration:none; color:#111; position:relative; font-weight:500; "> About <span style=" position:absolute; left:0; bottom:-6px; width:0%; height:2px; background:#FFC107; transition:0.3s; "></span> </a> 
-<a href="/index.html#benefits" style=" text-decoration:none; color:#111; position:relative; font-weight:500; "> Benefits <span style=" position:absolute; left:0; bottom:-6px; width:0%; height:2px; background:#FFC107; transition:0.3s; "></span> </a> 
-<a href="/index.html#protection" style=" text-decoration:none; color:#111; position:relative; font-weight:500; "> Protection <span style=" position:absolute; left:0; bottom:-6px; width:0%; height:2px; background:#FFC107; transition:0.3s; "></span> </a> 
-<a href="/index.html#faq" style=" text-decoration:none; color:#111; position:relative; font-weight:500; "> FAQ <span style=" position:absolute; left:0; bottom:-6px; width:0%; height:2px; background:#FFC107; transition:0.3s; "></span> </a> </div> 
+<a href="/fix-your-issue/index.html" style=" text-decoration:none; color:#111; position:relative; font-weight:500; "> Home <span style=" position:absolute; left:0; bottom:-6px; width:0%; height:2px; background:#FFC107; transition:0.3s; "></span> </a> 
+<a href="/fix-your-issue/index.html#about" style=" text-decoration:none; color:#111; position:relative; font-weight:500; "> About <span style=" position:absolute; left:0; bottom:-6px; width:0%; height:2px; background:#FFC107; transition:0.3s; "></span> </a> 
+<a href="/fix-your-issue/index.html#benefits" style=" text-decoration:none; color:#111; position:relative; font-weight:500; "> Benefits <span style=" position:absolute; left:0; bottom:-6px; width:0%; height:2px; background:#FFC107; transition:0.3s; "></span> </a> 
+<a href="/fix-your-issue/index.html#protection" style=" text-decoration:none; color:#111; position:relative; font-weight:500; "> Protection <span style=" position:absolute; left:0; bottom:-6px; width:0%; height:2px; background:#FFC107; transition:0.3s; "></span> </a> 
+<a href="/fix-your-issue/index.html#faq" style=" text-decoration:none; color:#111; position:relative; font-weight:500; "> FAQ <span style=" position:absolute; left:0; bottom:-6px; width:0%; height:2px; background:#FFC107; transition:0.3s; "></span> </a> </div> 
 <a href="/contact-us.html" style=" background:#FFC107; padding:10px 22px; border-radius:8px; text-decoration:none; font-weight:600; color:#111; "> Contact Now </a>
 
 
@@ -274,7 +274,7 @@ button {
 
     <!-- LEFT IMAGE -->
     <div class="contact-image">
-      <img src="images/contactus.png" alt="Contact Us">
+      <img src="/fix-your-issue/images/contactus.png" alt="Contact Us">
     </div>
 
     <!-- RIGHT FORM -->
@@ -451,11 +451,11 @@ We deliver advanced cybersecurity protection to keep your systems secure, optimi
 <h4 style="color:#fff;margin-bottom:20px;font-size:16px;">Quick Links</h4>
 
 <div class="footer-links">
-<a href="/index.html#home">Home</a>
-<a href="/index.html#benefits">Benefits</a>
-<a href="/index.html#about">About</a>
-<a href="/index.html#protection">Protection</a>
-<a href="/index.html#faq">FAQ</a>
+<a href="/fix-your-issue/index.html#home">Home</a>
+<a href="/fix-your-issue/index.html#benefits">Benefits</a>
+<a href="/fix-your-issue/index.html#about">About</a>
+<a href="/fix-your-issue/index.html#protection">Protection</a>
+<a href="/fix-your-issue/index.html#faq">FAQ</a>
 
 </div>
 
