Linking contact us

--- a/fix-your-issue/index.html
+++ b/fix-your-issue/index.html
@@ -306,7 +306,7 @@ gap:20px;
 flex-wrap:wrap;
 ">
 
-<a href="contact-us.html" style="
+<a href="/contact-us.html" style="
 flex:1 1 220px;
 max-width:240px;
 text-align:center;
@@ -321,7 +321,7 @@ font-size:14px;
 Renew Antivirus →
 </a>
 
-<a href="contact-us.html" style="
+<a href="/contact-us.html" style="
 flex:1 1 220px;
 max-width:240px;
 text-align:center;
@@ -336,7 +336,7 @@ font-size:14px;
 Antivirus Installation →
 </a>
 
-<a href="contact-us.html" style="
+<a href="/contact-us.html" style="
 flex:1 1 220px;
 max-width:240px;
 text-align:center;
@@ -351,7 +351,7 @@ font-size:14px;
 Security Assistance →
 </a>
 
-<a href="contact-us.html" style="
+<a href="/contact-us.html" style="
 flex:1 1 220px;
 max-width:240px;
 text-align:center;
