home page changes

--- a/fix-your-issue.html
+++ b/fix-your-issue.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Defendbyto</title>
 <!-- Favicon -->
-<link rel="icon" type="image/png" href="/fix-your-issue/images/fav.png">
+<link rel="icon" type="image/png" href="/images/fav.png">
 
 
 
@@ -38,8 +38,8 @@ align-items:center;
 
 <!-- LOGO -->
 <div class="site-logo">
-    <img src="/fix-your-issue/images/fav.png" alt="Defendbyto Logo">
-    <a href="/fix-your-issue/index.html">Defendbyto</a>
+    <img src="/images/fav.png" alt="Defendbyto Logo">
+    <a href="fix-your-issue.html">Defendbyto</a>
 </div>
 
 <style>
@@ -71,7 +71,7 @@ align-items:center;
 gap:30px;
 ">
 
-<a href="/fix-your-issue/index.html" style="
+<a href="fix-your-issue.html" style="
 text-decoration:none;
 color:#111;
 position:relative;
@@ -82,7 +82,7 @@ Home
 <span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFC107;transition:0.3s;"></span>
 </a>
 
-<a href="/fix-your-issue/index.html#about" style="
+<a href="fix-your-issue.html#about" style="
 text-decoration:none;
 color:#111;
 position:relative;
@@ -93,7 +93,7 @@ About
 <span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFC107;transition:0.3s;"></span>
 </a>
 
-<a href="/fix-your-issue/index.html#benefits" style="
+<a href="fix-your-issue.html#benefits" style="
 text-decoration:none;
 color:#111;
 position:relative;
@@ -104,7 +104,7 @@ Benefits
 <span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFC107;transition:0.3s;"></span>
 </a>
 
-<a href="/fix-your-issue/index.html#protection" style="
+<a href="fix-your-issue.html#protection" style="
 text-decoration:none;
 color:#111;
 position:relative;
@@ -115,7 +115,7 @@ Protection
 <span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFC107;transition:0.3s;"></span>
 </a>
 
-<a href="/fix-your-issue/index.html#faq" style="
+<a href="fix-your-issue.html#faq" style="
 text-decoration:none;
 color:#111;
 position:relative;
@@ -1116,11 +1116,11 @@ We deliver advanced cybersecurity protection to keep your systems secure, optimi
 <h4 style="color:#fff;margin-bottom:20px;font-size:16px;">Quick Links</h4>
 
 <div class="footer-links">
-<a href="/fix-your-issue/index.html#home">Home</a>
-<a href="/fix-your-issue/index.html#benefits">Benefits</a>
-<a href="/fix-your-issue/index.html#about">About</a>
-<a href="/fix-your-issue/index.html#protection">Protection</a>
-<a href="/fix-your-issue/index.html#faq">FAQ</a>
+<a href="fix-your-issue.html#home">Home</a>
+<a href="fix-your-issue.html#benefits">Benefits</a>
+<a href="fix-your-issue.html#about">About</a>
+<a href="fix-your-issue.html#protection">Protection</a>
+<a href="fix-your-issue.html#faq">FAQ</a>
 </div>
 
 </div>
