--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Defendbyto</title>
-<link rel="icon" type="image/png" href="/fix-your-issue/images/fav.png">
+<link rel="icon" type="image/png" href="/images/fav.png">
 
 </head>
 
@@ -35,8 +35,8 @@ align-items:center;
 
 <!-- LOGO -->
 <div class="site-logo">
-    <img src="/fix-your-issue/images/fav.png" alt="Defendbyto Logo">
-    <a href="/fix-your-issue/index.html">Defendbyto</a>
+    <img src="/images/fav.png" alt="Defendbyto Logo">
+    <a href="fix-your-issue.html">Defendbyto</a>
 </div>
 
 <style>
@@ -67,7 +67,7 @@ align-items:center;
 gap:30px;
 ">
 
-<a href="/fix-your-issue/index.html" style="
+<a href="fix-your-issue.html" style="
 text-decoration:none;
 color:#111;
 position:relative;
@@ -78,7 +78,7 @@ Home
 <span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFC107;transition:0.3s;"></span>
 </a>
 
-<a href="/fix-your-issue/index.html#about" style="
+<a href="fix-your-issue.html#about" style="
 text-decoration:none;
 color:#111;
 position:relative;
@@ -89,7 +89,7 @@ About
 <span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFC107;transition:0.3s;"></span>
 </a>
 
-<a href="/fix-your-issue/index.html#benefits" style="
+<a href="fix-your-issue.html#benefits" style="
 text-decoration:none;
 color:#111;
 position:relative;
@@ -100,7 +100,7 @@ Benefits
 <span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFC107;transition:0.3s;"></span>
 </a>
 
-<a href="/fix-your-issue/index.html#protection" style="
+<a href="fix-your-issue.html#protection" style="
 text-decoration:none;
 color:#111;
 position:relative;
@@ -111,7 +111,7 @@ Protection
 <span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFC107;transition:0.3s;"></span>
 </a>
 
-<a href="/fix-your-issue/index.html#faq" style="
+<a href="fix-your-issue.html#faq" style="
 text-decoration:none;
 color:#111;
 position:relative;
@@ -351,11 +351,11 @@ We deliver advanced cybersecurity protection to keep your systems secure, optimi
 <h4 style="color:#fff;margin-bottom:20px;font-size:16px;">Quick Links</h4>
 
 <div class="footer-links">
-<a href="/fix-your-issue/index.html#home">Home</a>
-<a href="/fix-your-issue/index.html#benefits">Benefits</a>
-<a href="/fix-your-issue/index.html#about">About</a>
-<a href="/fix-your-issue/index.html#protection">Protection</a>
-<a href="/fix-your-issue/index.html#faq">FAQ</a>
+<a href="fix-your-issue.html#home">Home</a>
+<a href="fix-your-issue.html#benefits">Benefits</a>
+<a href="fix-your-issue.html#about">About</a>
+<a href="fix-your-issue.html#protection">Protection</a>
+<a href="fix-your-issue.html#faq">FAQ</a>
 </div>
 
 </div>
