image not fetched solve

--- a/fix-your-issue.html
+++ b/fix-your-issue.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Defendbyto</title>
 <!-- Favicon -->
-<link rel="icon" type="image/png" href="/images/fav.png">
+<link rel="icon" type="image/png" href="//images/fav.png">
 
 
 
@@ -281,7 +281,7 @@ justify-content:center;
 align-items:center;
 ">
 
-<img src="images/hero.png" 
+<img src="/images/hero.png" 
 style="
 width:100%;
 max-width:400px;
@@ -397,7 +397,7 @@ display:flex;
 justify-content:center;
 ">
 
-<img src="images/about.png" alt="Security Experts"
+<img src="/images/about.png" alt="Security Experts"
 style="
 width:100%;
 max-width:520px;
