color code changed

--- a/fix-your-issue.html
+++ b/fix-your-issue.html
@@ -79,7 +79,7 @@ font-weight:500;
 display:inline-block;
 ">
 Home
-<span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFC107;transition:0.3s;"></span>
+<span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFA500;transition:0.3s;"></span>
 </a>
 
 <a href="fix-your-issue.html#about" style="
@@ -90,7 +90,7 @@ font-weight:500;
 display:inline-block;
 ">
 About
-<span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFC107;transition:0.3s;"></span>
+<span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFA500;transition:0.3s;"></span>
 </a>
 
 <a href="fix-your-issue.html#benefits" style="
@@ -101,7 +101,7 @@ font-weight:500;
 display:inline-block;
 ">
 Benefits
-<span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFC107;transition:0.3s;"></span>
+<span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFA500;transition:0.3s;"></span>
 </a>
 
 <a href="fix-your-issue.html#protection" style="
@@ -112,7 +112,7 @@ font-weight:500;
 display:inline-block;
 ">
 Protection
-<span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFC107;transition:0.3s;"></span>
+<span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFA500;transition:0.3s;"></span>
 </a>
 
 <a href="fix-your-issue.html#faq" style="
@@ -123,14 +123,14 @@ font-weight:500;
 display:inline-block;
 ">
 FAQ
-<span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFC107;transition:0.3s;"></span>
+<span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFA500;transition:0.3s;"></span>
 </a>
 
 </div>
 
 <!-- BUTTON RIGHT -->
 <a href="/contact-us.html" style="
-background:#FFC107;
+background:#FFA500;
 padding:10px 22px;
 border-radius:8px;
 text-decoration:none;
@@ -206,17 +206,17 @@ flex-wrap:wrap;
 ">
 
 <div style="background:#fff;padding:7px 14px;border-radius:30px;display:flex;align-items:center;gap:8px;font-size:12px;font-weight:600;box-shadow:0 5px 12px rgba(0,0,0,0.06);">
-<span style="width:18px;height:18px;background:#FFC107;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:11px;font-weight:bold;color:#111;">✓</span>
+<span style="width:18px;height:18px;background:#FFA500;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:11px;font-weight:bold;color:#111;">✓</span>
 Real-Time Protection
 </div>
 
 <div style="background:#fff;padding:7px 14px;border-radius:30px;display:flex;align-items:center;gap:8px;font-size:12px;font-weight:600;box-shadow:0 5px 12px rgba(0,0,0,0.06);">
-<span style="width:18px;height:18px;background:#FFC107;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:11px;font-weight:bold;color:#111;">✓</span>
+<span style="width:18px;height:18px;background:#FFA500;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:11px;font-weight:bold;color:#111;">✓</span>
 Malware Defense
 </div>
 
 <div style="background:#fff;padding:7px 14px;border-radius:30px;display:flex;align-items:center;gap:8px;font-size:12px;font-weight:600;box-shadow:0 5px 12px rgba(0,0,0,0.06);">
-<span style="width:18px;height:18px;background:#FFC107;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:11px;font-weight:bold;color:#111;">✓</span>
+<span style="width:18px;height:18px;background:#FFA500;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:11px;font-weight:bold;color:#111;">✓</span>
 24/7 Monitoring
 </div>
 
@@ -231,7 +231,7 @@ margin-bottom:15px;
 color:#111;
 ">
 Secure Your Digital World <br>
-With <span style="color:#FFC107;">Smart Protection</span>
+With <span style="color:#FFA500;">Smart Protection</span>
 </h1>
 
 <p style="
@@ -248,22 +248,22 @@ Advanced protection that safeguards your devices from malware, ransomware and on
 <div style="display:flex;flex-direction:column;gap:10px;margin-bottom:30px;">
 
 <div style="display:flex;align-items:center;gap:10px;">
-<span style="width:22px;height:22px;background:#FFC107;border-radius:6px;display:flex;align-items:center;justify-content:center;font-size:12px;font-weight:bold;color:#111;">✓</span>
+<span style="width:22px;height:22px;background:#FFA500;border-radius:6px;display:flex;align-items:center;justify-content:center;font-size:12px;font-weight:bold;color:#111;">✓</span>
 <span style="font-size:14px;">Complete malware & virus detection</span>
 </div>
 
 <div style="display:flex;align-items:center;gap:10px;">
-<span style="width:22px;height:22px;background:#FFC107;border-radius:6px;display:flex;align-items:center;justify-content:center;font-size:12px;font-weight:bold;color:#111;">✓</span>
+<span style="width:22px;height:22px;background:#FFA500;border-radius:6px;display:flex;align-items:center;justify-content:center;font-size:12px;font-weight:bold;color:#111;">✓</span>
 <span style="font-size:14px;">24/7 real-time monitoring</span>
 </div>
 
 <div style="display:flex;align-items:center;gap:10px;">
-<span style="width:22px;height:22px;background:#FFC107;border-radius:6px;display:flex;align-items:center;justify-content:center;font-size:12px;font-weight:bold;color:#111;">✓</span>
+<span style="width:22px;height:22px;background:#FFA500;border-radius:6px;display:flex;align-items:center;justify-content:center;font-size:12px;font-weight:bold;color:#111;">✓</span>
 <span style="font-size:14px;">Secure installation & configuration</span>
 </div>
 
 <div style="display:flex;align-items:center;gap:10px;">
-<span style="width:22px;height:22px;background:#FFC107;border-radius:6px;display:flex;align-items:center;justify-content:center;font-size:12px;font-weight:bold;color:#111;">✓</span>
+<span style="width:22px;height:22px;background:#FFA500;border-radius:6px;display:flex;align-items:center;justify-content:center;font-size:12px;font-weight:bold;color:#111;">✓</span>
 <span style="font-size:14px;">System optimization & health checks</span>
 </div>
 
@@ -310,7 +310,7 @@ flex-wrap:wrap;
 flex:1 1 220px;
 max-width:240px;
 text-align:center;
-background:#FFC107;
+background:#FFA500;
 padding:14px 0;
 border-radius:10px;
 font-weight:700;
@@ -340,7 +340,7 @@ Antivirus Installation →
 flex:1 1 220px;
 max-width:240px;
 text-align:center;
-background:#FFC107;
+background:#FFA500;
 padding:14px 0;
 border-radius:10px;
 font-weight:700;
@@ -422,7 +422,7 @@ margin-bottom:18px;
 line-height:1.3;
 ">
 Dedicated Security Experts 
-<span style="color:#FFC107;">You Can Trust</span>
+<span style="color:#FFA500;">You Can Trust</span>
 </h2>
 
 <p style="
@@ -443,7 +443,7 @@ We provide independent digital security solutions focused on protecting individu
 width:24px;
 height:24px;
 border-radius:50%;
-border:2px solid #FFC107;
+border:2px solid #FFA500;
 display:flex;
 align-items:center;
 justify-content:center;
@@ -459,7 +459,7 @@ color:#111;
 width:24px;
 height:24px;
 border-radius:50%;
-border:2px solid #FFC107;
+border:2px solid #FFA500;
 display:flex;
 align-items:center;
 justify-content:center;
@@ -475,7 +475,7 @@ color:#111;
 width:24px;
 height:24px;
 border-radius:50%;
-border:2px solid #FFC107;
+border:2px solid #FFA500;
 display:flex;
 align-items:center;
 justify-content:center;
@@ -491,7 +491,7 @@ color:#111;
 width:24px;
 height:24px;
 border-radius:50%;
-border:2px solid #FFC107;
+border:2px solid #FFA500;
 display:flex;
 align-items:center;
 justify-content:center;
@@ -545,7 +545,7 @@ scroll-margin-top:90px;
 <!-- TITLE -->
 <div style="text-align:center;margin-bottom:55px;">
 <h2 style="font-size:30px;font-weight:800;margin-bottom:10px;">
-Advanced <span style="color:#FFC107;">Security Features</span>
+Advanced <span style="color:#FFA500;">Security Features</span>
 </h2>
 <p style="font-size:15px;color:#555;max-width:620px;margin:auto;line-height:1.6;">
 Powerful protection system built to defend, optimize and monitor your devices with enterprise-level precision.
@@ -626,7 +626,7 @@ box-shadow:0 6px 18px rgba(0,0,0,0.04);
 }
 
 .benefit-card:hover{
-border:1px solid #FFC107;
+border:1px solid #FFA500;
 transform:translateY(-8px);
 box-shadow:0 20px 45px rgba(0,0,0,0.08);
 }
@@ -660,7 +660,7 @@ transition:all 0.3s ease;
 }
 
 .benefit-card:hover .icon-circle{
-background:#FFC107;
+background:#FFA500;
 color:#111;
 transform:scale(1.1);
 }
@@ -694,7 +694,7 @@ scroll-margin-top:90px;
 <!-- HEADING -->
 <div style="text-align:center;margin-bottom:50px;">
 <h2 style="font-size:30px;font-weight:800;margin-bottom:8px;">
-Our <span style="color:#FFC107;">Protection Roadmap</span>
+Our <span style="color:#FFA500;">Protection Roadmap</span>
 </h2>
 <p style="color:#666;font-size:14px;max-width:600px;margin:auto;">
 A structured, step-by-step cybersecurity workflow designed to detect threats, secure your system, and maintain continuous protection.
@@ -778,7 +778,7 @@ top:0;
 transform:translateX(-50%);
 width:3px;
 height:100%;
-background:linear-gradient(to bottom,#FFC107,#ffda47);
+background:linear-gradient(to bottom,#FFA500,#ffda47);
 border-radius:4px;
 }
 
@@ -811,7 +811,7 @@ border:1px solid transparent;
 
 .road-card:hover{
 transform:translateY(-5px);
-border:1px solid #FFC107;
+border:1px solid #FFA500;
 box-shadow:0 18px 40px rgba(255,193,7,0.25);
 }
 
@@ -854,7 +854,7 @@ left:-18px;
 }
 
 .road-item:hover .road-step{
-background:#FFC107;
+background:#FFA500;
 color:#111;
 }
 
@@ -901,7 +901,7 @@ scroll-margin-top:90px;
 <!-- HEADING -->
 <div style="text-align:center;margin-bottom:50px;">
 <h2 style="font-size:30px;font-weight:800;margin-bottom:10px;">
-Frequently Asked <span style="color:#FFC107;">Questions</span>
+Frequently Asked <span style="color:#FFA500;">Questions</span>
 </h2>
 <p style="color:#666;font-size:14px;">
 Everything you need to know about our digital protection services.
@@ -980,7 +980,7 @@ transition:0.3s ease;
 }
 
 .faq-item.active{
-border-left:4px solid #FFC107;
+border-left:4px solid #FFA500;
 box-shadow:0 18px 40px rgba(255,193,7,0.15);
 }
 
@@ -1001,7 +1001,7 @@ transition:0.3s ease;
 
 .faq-item.active .faq-icon{
 transform:rotate(45deg);
-color:#FFC107;
+color:#FFA500;
 }
 
 .faq-answer{
@@ -1075,7 +1075,7 @@ top:0;
 left:0;
 width:100%;
 height:3px;
-background:linear-gradient(90deg,#FFC107,#ff9800,#FFC107);
+background:linear-gradient(90deg,#FFA500,#ff9800,#FFA500);
 "></div>
 
 <div style="
@@ -1152,7 +1152,7 @@ We deliver advanced cybersecurity protection to keep your systems secure, optimi
 <a href="/contact-us.html" style="
 display:inline-block;
 margin-top:18px;
-background:#FFC107;
+background:#FFA500;
 color:#111;
 padding:10px 18px;
 border-radius:6px;
@@ -1221,7 +1221,7 @@ left:0;
 bottom:-4px;
 width:0;
 height:2px;
-background:#FFC107;
+background:#FFA500;
 transition:width 0.3s ease;
 }
 
@@ -1258,7 +1258,7 @@ left:0;
 bottom:-4px;
 width:0;
 height:2px;
-background:#FFC107;
+background:#FFA500;
 transition:width 0.3s ease;
 }
 
