--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ font-weight:800;
 margin-bottom:20px;
 color:#111;
 ">
-Welcome to <span style="color:#FFC107;">Defendbyto</span>
+Welcome to <span style="color:#FFA500;">Defendbyto</span>
 </h1>
 
 <p style="
@@ -38,7 +38,7 @@ We provide modern digital solutions designed to improve performance, streamline 
 </p>
 
 <a href="/fix-your-issue.html" style="
-background:#FFC107;
+background: #FFA500;
 padding:14px 30px;
 border-radius:8px;
 text-decoration:none;
@@ -193,7 +193,7 @@ Connect with our team today and discover how we can help improve your digital ex
 </p>
 
 <a href="contact-us.html" style="
-background:#FFC107;
+background:#FFA500;
 padding:14px 30px;
 border-radius:8px;
 text-decoration:none;
