--- a/contact-us.html
+++ b/contact-us.html
@@ -61,12 +61,12 @@ align-items:center;
 
 <div style="display:flex;gap:30px;">
 
-<a href="fix-your-issue.html" style=" text-decoration:none; color:#111; position:relative; font-weight:500; "> Home <span style=" position:absolute; left:0; bottom:-6px; width:0%; height:2px; background:#FFC107; transition:0.3s; "></span> </a> 
-<a href="fix-your-issue.html#about" style=" text-decoration:none; color:#111; position:relative; font-weight:500; "> About <span style=" position:absolute; left:0; bottom:-6px; width:0%; height:2px; background:#FFC107; transition:0.3s; "></span> </a> 
-<a href="fix-your-issue.html#benefits" style=" text-decoration:none; color:#111; position:relative; font-weight:500; "> Benefits <span style=" position:absolute; left:0; bottom:-6px; width:0%; height:2px; background:#FFC107; transition:0.3s; "></span> </a> 
-<a href="fix-your-issue.html#protection" style=" text-decoration:none; color:#111; position:relative; font-weight:500; "> Protection <span style=" position:absolute; left:0; bottom:-6px; width:0%; height:2px; background:#FFC107; transition:0.3s; "></span> </a> 
-<a href="fix-your-issue.html#faq" style=" text-decoration:none; color:#111; position:relative; font-weight:500; "> FAQ <span style=" position:absolute; left:0; bottom:-6px; width:0%; height:2px; background:#FFC107; transition:0.3s; "></span> </a> </div> 
-<a href="/contact-us.html" style=" background:#FFC107; padding:10px 22px; border-radius:8px; text-decoration:none; font-weight:600; color:#111; "> Contact Now </a>
+<a href="fix-your-issue.html" style=" text-decoration:none; color:#111; position:relative; font-weight:500; "> Home <span style=" position:absolute; left:0; bottom:-6px; width:0%; height:2px; background:#FFA500; transition:0.3s; "></span> </a> 
+<a href="fix-your-issue.html#about" style=" text-decoration:none; color:#111; position:relative; font-weight:500; "> About <span style=" position:absolute; left:0; bottom:-6px; width:0%; height:2px; background:#FFA500; transition:0.3s; "></span> </a> 
+<a href="fix-your-issue.html#benefits" style=" text-decoration:none; color:#111; position:relative; font-weight:500; "> Benefits <span style=" position:absolute; left:0; bottom:-6px; width:0%; height:2px; background:#FFA500; transition:0.3s; "></span> </a> 
+<a href="fix-your-issue.html#protection" style=" text-decoration:none; color:#111; position:relative; font-weight:500; "> Protection <span style=" position:absolute; left:0; bottom:-6px; width:0%; height:2px; background:#FFA500; transition:0.3s; "></span> </a> 
+<a href="fix-your-issue.html#faq" style=" text-decoration:none; color:#111; position:relative; font-weight:500; "> FAQ <span style=" position:absolute; left:0; bottom:-6px; width:0%; height:2px; background:#FFA500; transition:0.3s; "></span> </a> </div> 
+<a href="/contact-us.html" style=" background:#FFA500; padding:10px 22px; border-radius:8px; text-decoration:none; font-weight:600; color:#111; "> Contact Now </a>
 
 
 
@@ -410,7 +410,7 @@ top:0;
 left:0;
 width:100%;
 height:3px;
-background:linear-gradient(90deg,#FFC107,#ff9800,#FFC107);
+background:linear-gradient(90deg,#FFA500,#ff9800,#FFA500);
 "></div>
 
 <div style="
@@ -488,7 +488,7 @@ We deliver advanced cybersecurity protection to keep your systems secure, optimi
 <a href="/contact-us.html" style="
 display:inline-block;
 margin-top:18px;
-background:#FFC107;
+background:#FFA500;
 color:#111;
 padding:10px 18px;
 border-radius:6px;
@@ -557,7 +557,7 @@ left:0;
 bottom:-4px;
 width:0;
 height:2px;
-background:#FFC107;
+background:#FFA500;
 transition:width 0.3s ease;
 }
 
@@ -594,7 +594,7 @@ left:0;
 bottom:-4px;
 width:0;
 height:2px;
-background:#FFC107;
+background:#FFA500;
 transition:width 0.3s ease;
 }
 
