--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -75,7 +75,7 @@ font-weight:500;
 display:inline-block;
 ">
 Home
-<span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFC107;transition:0.3s;"></span>
+<span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFA500;transition:0.3s;"></span>
 </a>
 
 <a href="fix-your-issue.html#about" style="
@@ -86,7 +86,7 @@ font-weight:500;
 display:inline-block;
 ">
 About
-<span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFC107;transition:0.3s;"></span>
+<span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFA500;transition:0.3s;"></span>
 </a>
 
 <a href="fix-your-issue.html#benefits" style="
@@ -97,7 +97,7 @@ font-weight:500;
 display:inline-block;
 ">
 Benefits
-<span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFC107;transition:0.3s;"></span>
+<span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFA500;transition:0.3s;"></span>
 </a>
 
 <a href="fix-your-issue.html#protection" style="
@@ -108,7 +108,7 @@ font-weight:500;
 display:inline-block;
 ">
 Protection
-<span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFC107;transition:0.3s;"></span>
+<span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFA500;transition:0.3s;"></span>
 </a>
 
 <a href="fix-your-issue.html#faq" style="
@@ -119,14 +119,14 @@ font-weight:500;
 display:inline-block;
 ">
 FAQ
-<span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFC107;transition:0.3s;"></span>
+<span style="position:absolute;left:0;bottom:-6px;width:0;height:2px;background:#FFA500;transition:0.3s;"></span>
 </a>
 
 </div>
 
 <!-- BUTTON RIGHT -->
 <a href="/contact-us.html" style="
-background:#FFC107;
+background:#FFA500;
 padding:10px 22px;
 border-radius:8px;
 text-decoration:none;
@@ -363,7 +363,7 @@ top:0;
 left:0;
 width:100%;
 height:3px;
-background:linear-gradient(90deg,#FFC107,#ff9800,#FFC107);
+background:linear-gradient(90deg,#FFA500,#ff9800,#FFA500);
 "></div>
 
 <div style="
@@ -440,7 +440,7 @@ We deliver advanced cybersecurity protection to keep your systems secure, optimi
 <a href="/contact-us.html" style="
 display:inline-block;
 margin-top:18px;
-background:#FFC107;
+background:#FFA500;
 color:#111;
 padding:10px 18px;
 border-radius:6px;
@@ -509,7 +509,7 @@ left:0;
 bottom:-4px;
 width:0;
 height:2px;
-background:#FFC107;
+background:#FFA500;
 transition:width 0.3s ease;
 }
 
@@ -546,7 +546,7 @@ left:0;
 bottom:-4px;
 width:0;
 height:2px;
-background:#FFC107;
+background:#FFA500;
 transition:width 0.3s ease;
 }
 
