--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ margin-bottom:30px;
 We provide modern digital solutions designed to improve performance, streamline operations, and enhance online presence for businesses and individuals.
 </p>
 
-<a href="/fix-your-issue.html" style="
+<a href="#fix-your-issue.html" style="
 background: #FFA500;
 padding:14px 30px;
 border-radius:8px;
