--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Defendbyto</title>
 <link rel="icon" type="image/png" href="/images/fav.png">
+<script src="//code.jivosite.com/widget/qYm4IZSGp3" async=""></script>
 </head>
 
 <body style="margin:0;font-family:Segoe UI, sans-serif;background:#f8fafc;">
