--- a/refund-policy.html
+++ b/refund-policy.html
@@ -5,6 +5,7 @@
 <title>Defendbyto</title>
 <link rel="icon" type="image/png" href="/images/fav.png">
 
+<script src="//code.jivosite.com/widget/qYm4IZSGp3" async=""></script>
 </head>
 
 <body style="margin:0;font-family:Segoe UI, sans-serif;background:#f8fafc;">
