--- a/contact-us.html
+++ b/contact-us.html
@@ -91,177 +91,119 @@ html {
   scroll-behavior: smooth;
 }
 
-
+/* SECTION SMALLER */
 .contact-section {
-  padding: 100px 20px;
-  background: #f5f7fa;
+  padding: 80px 20px; /* reduced from 120 */
+  background: linear-gradient(135deg,#f4f6f9,#eef2f7);
 }
 
 .contact-container {
-  max-width: 1100px;
+  max-width: 1050px; /* slightly reduced */
   margin: auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  
-  border-radius: 16px;
-  overflow: hidden;
- 
+  align-items: stretch;
+  gap: 40px; /* reduced gap */
 }
 
 /* LEFT IMAGE */
+.contact-image {
+  display: flex;
+}
+
 .contact-image img {
   width: 100%;
-  height: 450px;
+  height: 100%;
+  min-height: 420px; /* reduced height */
   object-fit: cover;
-  border-radius:15px;
+  border-radius: 16px;
+  box-shadow: 0 15px 40px rgba(0,0,0,0.07);
 }
 
 /* RIGHT FORM */
 .contact-form-box {
-  padding: 60px;
+  background: #ffffff;
+  padding: 40px 40px; /* reduced padding */
+  border-radius: 16px;
+  box-shadow: 0 15px 40px rgba(0,0,0,0.05);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .contact-form-box h3 {
-  font-size: 32px;
-  margin-bottom: 30px;
+  font-size: 26px; /* slightly smaller */
+  margin-bottom: 25px;
+  font-weight: 700;
   color: #111;
 }
 
 .input-group {
-  margin-bottom: 20px;
+  margin-bottom: 16px; /* tighter spacing */
 }
 
 .input-group input,
 .input-group select {
   width: 100%;
-  padding: 15px;
-  border: 1px solid #ddd;
+  padding: 13px; /* slightly smaller */
+  border: 1px solid #e5e7eb;
   border-radius: 8px;
-  font-size: 15px;
+  font-size: 14px;
   background: #fafafa;
+  transition: 0.3s ease;
 }
 
 .input-group input:focus,
 .input-group select:focus {
   border-color: #FFCC00;
-  outline: none;
   background: #fff;
+  box-shadow: 0 0 0 3px rgba(255,204,0,0.15);
+  outline: none;
 }
 
 button {
   width: 100%;
-  padding: 16px;
+  padding: 14px; /* smaller button */
   background: #FFCC00;
   border: none;
   border-radius: 8px;
-  font-size: 16px;
-  font-weight: bold;
+  font-size: 15px;
+  font-weight: 600;
   cursor: pointer;
   color: #000;
+  transition: 0.3s ease;
 }
 
-
+button:hover {
+  background: #e6b800;
+  transform: translateY(-2px);
+}
 
 .error {
-  color: red;
-  font-size: 13px;
-  margin-top: 5px;
+  color: #e11d48;
+  font-size: 12px;
+  margin-top: 4px;
   display: block;
 }
 
+/* Responsive */
 
-@media (max-width: 1200px) {
-  .contact-container {
-    max-width: 1000px;
-  }
-
-  .contact-form-box {
-    padding: 50px;
-  }
-}
-
-/* Tablets & small laptops */
-@media (max-width: 992px) {
-  .contact-container {
-    grid-template-columns: 1fr 1fr;
-  }
-
-  .contact-form-box {
-    padding: 40px;
-  }
-
-  .contact-form-box h3 {
-    font-size: 28px;
-  }
-}
-
-/* Tablets & large mobiles */
-@media (max-width: 900px) {
+@media (max-width: 768px) {
   .contact-container {
     grid-template-columns: 1fr;
   }
 
-  .contact-image {
-    height: 260px;
-  }
-
   .contact-image img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+    min-height: 250px;
+    height: 280px;
   }
 
-  .contact-form-box {
-    padding: 35px 30px;
-  }
-
-  .contact-form-box h3 {
-    text-align: center;
-  }
-}
-
-/* Medium mobiles */
-@media (max-width: 600px) {
-  .contact-section {
-    padding: 100px 15px;
-  }
-  .contact-image{
-    width:100%;height:400px;
-  }
   .contact-form-box {
     padding: 30px 20px;
   }
 
-  .input-group input,
-  .input-group select {
-    padding: 14px;
-    font-size: 14px;
-  }
-
-  button {
-    padding: 15px;
-    font-size: 15px;
-  }
-}
-
-/* Small mobiles */
-@media (max-width: 400px) {
-  .contact-image {
-    height: 220px;
-  }
-
   .contact-form-box h3 {
-    font-size: 22px;
-  }
-
-  .input-group input,
-  .input-group select {
-    padding: 12px;
-    font-size: 13px;
-  }
-
-  button {
-    font-size: 14px;
+    text-align: center;
   }
 }
 </style>
@@ -280,7 +222,7 @@ button {
 
     <!-- RIGHT FORM -->
     <div class="contact-form-box">
-      <h3>Send Us a Message</h3>
+      <h3>Contact Us</h3>
 
       <form id="contactForm" onsubmit="return validateForm()">
 
