--- a/fix-your-issue.html
+++ b/fix-your-issue.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Defendbyto</title>
 <!-- Favicon -->
-<link rel="icon" type="image/png" href="//images/fav.png">
+<link rel="icon" type="image/png" href="/images/fav.png">
 
 
 
