norton page created

--- a/fix-your-issue.html
+++ b/fix-your-issue.html
@@ -307,7 +307,7 @@ gap:20px;
 flex-wrap:wrap;
 ">
 
-<a href="/contact-us.html" style="
+<a href="/norton/index.html" style="
 flex:1 1 220px;
 max-width:240px;
 text-align:center;
@@ -322,7 +322,7 @@ font-size:14px;
 Renew Antivirus →
 </a>
 
-<a href="/contact-us.html" style="
+<a href="/norton/index.html" style="
 flex:1 1 220px;
 max-width:240px;
 text-align:center;
@@ -337,7 +337,7 @@ font-size:14px;
 Antivirus Installation →
 </a>
 
-<a href="/contact-us.html" style="
+<a href="/norton/index.html" style="
 flex:1 1 220px;
 max-width:240px;
 text-align:center;
@@ -352,7 +352,7 @@ font-size:14px;
 Security Assistance →
 </a>
 
-<a href="/contact-us.html" style="
+<a href="/norton/index.html" style="
 flex:1 1 220px;
 max-width:240px;
 text-align:center;
